# AllProjects

Algorithms_and_DS/: CMakeLists.txt
Algorithms_and_DS/A log of firewood/: CMakeLists.txt
Algorithms_and_DS/AntiQuickSort/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Approximate_BS/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Binary_Search/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Codeforces/Codeforces round 883(div.3)/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Counting_Sort/: CMakeLists.txt  main.cpp
Algorithms_and_DS/DoublyLinkedList/src/: Main.java
Algorithms_and_DS/Fast_Search_In_Array/: CMakeLists.txt  main.cpp
Algorithms_and_DS/FindMedian/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Garland/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Heap_Sort/: CMakeLists.txt  main.cpp
Algorithms_and_DS/ITMO_ALGO_DS/Queue_On_Vector__lIST/: CMakeLists.txt  Linked_List.h  Queue.h  Stack.h  Vector.h  main.cpp
Algorithms_and_DS/ITMO_ALGO_DS/Stack_On_Vector__List/: CMakeLists.txt  Linked_List.h  Queue.h  Stack.h  main.cpp
Algorithms_and_DS/Infix_Postfix/: CMakeLists.txt  ExprPart.cpp  ExprPart.h  Functions.cpp  Functions.h  main.cpp
Algorithms_and_DS/Inversion_Counting/: CMakeLists.txt  main.cpp
Algorithms_and_DS/IsItHeap/src/: Main.java
Algorithms_and_DS/Java_Heap_Sort/src/: Main.java
Algorithms_and_DS/K_best/: CMakeLists.txt  main.cpp
Algorithms_and_DS/KthOrderStatistics/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Merge_Sort/: CMakeLists.txt  ListNode.h  main.cpp
Algorithms_and_DS/Multiplication table/: CMakeLists.txt
Algorithms_and_DS/Ozon/src/: Main.java
Algorithms_and_DS/OzonTraining/src/: Main.java
Algorithms_and_DS/Parking/: CMakeLists.txt  main.cpp
Algorithms_and_DS/RadixSort/: CMakeLists.txt  main.cpp
Algorithms_and_DS/RecuesinonTask_InterpretationAndStructureCP/src/: Main.java
Algorithms_and_DS/SortingForLinearTime/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Splitting the array/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Square root and square square/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Supermarket/: CMakeLists.txt  main.cpp
Algorithms_and_DS/Techiedelight/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Air Cownditioning II /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Cowntact Tracing /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Double Lexicographically Minimum/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Grass Planting /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Kevin and Permutation/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Livestock Lineup /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Mad Scientist /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Marin and Anti-coprime Permutation/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Maximum Increase/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Mowing the Field /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ One and Two/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Painting the Barn _easy_silver/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Premutation/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ The Great Revegetation /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Why Did the Cow Cross the Road III /: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/ Yet Another Promotion/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/2019/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/Anagrams_2/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/AngryCows/: CMakeLists.txt  main.cpp
Algorithms_and_DS/USACO/Bets/: CMakeLists.txt  (+1 more)
Algorithms_and_DS/Very_Easy_Task/: CMakeLists.txt  main.cpp
(+780 files in other folders)
